[package]
name = "table_range_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btree-range-map = "0.5.0"
btreemultimap = "0.1.1"
cc-traits = "1.0.0"
flate2 = "1.0.25"
noodles = { version = "0.34.0", features = ["bgzf"] }
range-map = "0.2.0"
slab = "0.4.8"
unbounded-interval-tree = "1.1.2"
