[package]
name = "table_range_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.25"
noodles-bgzf = "0.20.0"
noodles-core = "0.11.0"
noodles-csi = "0.14.0"
noodles-tabix = "0.17.0"
rangemap = "1.3.0"

